force-app/main/default/objects/Champion__c/Champion__c.object-meta.xml
<CustomObject>
    <label>Champion</label>
    <nameField>
        <label>Champion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Champions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>