force-app/main/default/objects/Champion__c/fields/Banner_and_Splash__c.field-meta.xml
<CustomField>
    <fullName>Banner_and_Splash__c</fullName>
    <label>Banner and Splash</label>
    <length>20</length>
    <type>Text</type>
</CustomField>