force-app/main/default/objects/Champion__c/fields/Champion_Banner__c.field-meta.xml
<CustomField>
    <fullName>Champion_Banner__c</fullName>
    <formula>IMAGE( &quot;https://ddragon.leagueoflegends.com/cdn/img/champion/loading/&quot; + Banner_and_Splash__c ,  Name + &quot;&apos;s Banner&quot;)</formula>
    <label>Champion Banner</label>
    <type>Text</type>
</CustomField>