force-app/main/default/objects/Champion__c/fields/Champion_Icon__c.field-meta.xml
<CustomField>
    <fullName>Champion_Icon__c</fullName>
    <label>Champion Icon</label>
    <length>20</length>
    <type>Text</type>
</CustomField>