force-app/main/default/objects/Champion__c/fields/Champion_Icon_Picture__c.field-meta.xml
<CustomField>
    <fullName>Champion_Icon_Picture__c</fullName>
    <formula>IMAGE( &quot;https://ddragon.leagueoflegends.com/cdn/11.5.1/img/champion/&quot;+Champion_Icon__c ,  Name + &quot;&apos;s Icon&quot;)</formula>
    <label>Champion Icon</label>
    <type>Text</type>
</CustomField>