force-app/main/default/objects/Champion__c/fields/Champion_Splash__c.field-meta.xml
<CustomField>
    <fullName>Champion_Splash__c</fullName>
    <formula>IMAGE( &quot;https://ddragon.leagueoflegends.com/cdn/img/champion/splash/&quot;+Banner_and_Splash__c , &quot;Champion Splash&quot;)</formula>
    <label>Champion Splash</label>
    <type>Text</type>
</CustomField>