force-app/main/default/objects/Champion__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <externalId>true</externalId>
    <label>id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>