force-app/main/default/objects/Champion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Champion_Icon_Picture__c</columns>
    <columns>Title__c</columns>
    <columns>Tag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>